testing Ananya's pipeline framework, doing first sleep staging analysis and starting participant dashboard with streamlit

--- a/framework/level_1/l1s2_TET_Data_Extraction.ipynb
+++ b/framework/level_1/l1s2_TET_Data_Extraction.ipynb
@@ -65,7 +65,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "enter path to participant folder for the required day:  G:\\Ananya Rao\\Documents\\LMU_Stream_ASD_003\\26092024_n16_27092024_d\n"
@@ -652,7 +652,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "enter column name of interest for which you need to check if all numeric or not:  Unnamed: 9\n"
@@ -697,7 +697,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "enter the index of q10 question:  913\n"
@@ -812,7 +812,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "enter path to participant folder for the required day:  G:\\Ananya Rao\\Documents\\LMU_Stream_ASD_003\\10092024_n01_11092024_d\n"
@@ -1326,7 +1326,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "enter x (e.g: x8) :  x8\n",
@@ -1387,7 +1387,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "enter x (e.g: x8) :  x8\n",
@@ -1439,19 +1439,11 @@
     "plt.savefig(os.path.join(fig_folder, ('TET_' + q +'_unscaled.png'))) \n",
     "plt.show()\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a83c14bd-e4d3-4cb9-9822-8339867b7769",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -1465,7 +1457,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
