--- a/framework/level_1/l1s4_Wristband_Raw_Data_Organization.ipynb
+++ b/framework/level_1/l1s4_Wristband_Raw_Data_Organization.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "209f2bc6-a714-438b-9193-5406a65d84a3",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "061de287-77e1-4150-a2e9-2c641e1c89ff",
    "metadata": {},
    "outputs": [],
@@ -201,18 +201,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "4787df02-5185-4789-bd90-5d19d7bff7aa",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "enter the participant folder:  G:\\Ananya Rao\\Documents\\LMU_Stream_ASD_003\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "Code block to reference the necessary folders\n",
@@ -232,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "702e88fd-a90d-4b34-9980-5128b75d2377",
    "metadata": {},
    "outputs": [],
@@ -252,12 +244,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "5777e5ab-242d-4e55-bde4-518e27dfb30b",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\becke\\AppData\\Local\\Temp\\ipykernel_41352\\3588001253.py:15: DeprecationWarning: datetime.datetime.utcfromtimestamp() is deprecated and scheduled for removal in a future version. Use timezone-aware objects to represent datetimes in UTC: datetime.datetime.fromtimestamp(timestamp, datetime.UTC).\n",
+      "  utc_time = datetime.utcfromtimestamp(utc_timestamp_seconds)\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "now generate all the new required files to be stored within the newly created directories\n",
@@ -285,7 +286,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -299,7 +300,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
