--- a/framework/level_3/l3s4a_sub_ob_stacked_vis.ipynb
+++ b/framework/level_3/l3s4a_sub_ob_stacked_vis.ipynb
@@ -825,7 +825,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -839,7 +839,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
